# alapi

./: Cargo.toml  LICENCE.md  README.md  config.json.example  config.toml  go.mod  go.sum
.github/workflows/: build.yml  go.yml
cmd/alapi/: main.go
pkg/config/: config.go
pkg/monitor/: monitor.go
src/: config.rs  main.rs
