[package]
name = "alapi-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
cpal = "0.13.4"
crossbeam = "0.8.1"
futures = "0.3.17"
ringbuf = "0.2.7"
rouille = "3.5.0"
serde = "1.0.130"
serde_derive = "1.0.130"
single_value_channel = "1.2.2"
toml = "0.5.8"
url = "2.2.2"

[features]
